<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">


        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints=""
            android:textColor="@color/colorDividerColor"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/loginUserPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:textColor="@color/colorDividerColor"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="@+id/loginEmail"
            app:layout_constraintStart_toStartOf="@+id/loginEmail"
            app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/signin"
            app:layout_constraintEnd_toEndOf="@+id/loginUserPassword"
            app:layout_constraintHorizontal_bias="0.0"
            android:fontFamily="sans-serif-light"
            app:layout_constraintStart_toStartOf="@+id/loginUserPassword"
            app:layout_constraintTop_toBottomOf="@+id/loginUserPassword" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleimageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:elevation="2dp"
                android:src="@drawable/user_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="5dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_icon" />

        <TextView
            android:id="@+id/noAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorDividerColor"
            android:text="@string/noAccount"

            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>