...
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@{post.username}"
            android:layout_marginBottom="2.5dp"/>
        <TextView
...
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorPrimaryText"
                android:text="@{post.commentsCount + ` show comments`}"
                android:id="@+id/show_comments_button"/>
        </RelativeLayout>



    </LinearLayout>
</layout>
...
