...
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/album_icon"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="15dp"
                                android:src="@drawable/album" />

                            <ImageView
                                android:id="@+id/map_icon"
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_marginStart="15dp"
                                android:src="@drawable/map" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
...
