<resources>
    <string name="app_name">ING project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail:</string>
    <string name="username">Username:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="company">Company:</string>
    <string name="show_albums">Show albums</string>
    <string name="show_photos">Show photos</string>
    <string name="show_map">Show map</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="existingAccount">Already have an account? Sign in</string>
    <string name="signin">Log in</string>
    <string name="noAccount">Don\'t have an account</string>
    <string name="title">Post title</string>
    <string name="description">Post description"</string>
</resources>
